Fix spacing for the Captcha section.

--- a/css/compat/plugins/compat-captcha-pro-400-beta-3.css
+++ b/css/compat/plugins/compat-captcha-pro-400-beta-3.css
@@ -1,7 +1,8 @@
 .fc-wrapper .fc-checkout-step[data-step-id=payment] > .cptch_block {
-  margin-bottom: 0;
+  margin: 0;
   padding: 20px 20px;
-  padding-bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .fc-wrapper .fc-checkout-step[data-step-id=payment] > #cptch_slide_captcha_container {
